Set visibility after setting parent

This avoids recreating native window, which should be generally good,
and works around QTBUG-87345.

BUG: 427569